Proyecto/Fase2/parser/parser.js
window.PEGGY = // @generated by Peggy 4.0.2.
//
// https://peggyjs.org/
(function() {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = ".global";
  var peg$c1 = ".section .data";
  var peg$c2 = ".data";
  var peg$c3 = ".section";
  var peg$c4 = ".text";
  var peg$c5 = ":";
  var peg$c6 = "ldr";
  var peg$c7 = "ldrb";
  var peg$c8 = "ldp";
  var peg$c9 = "str";
  var peg$c10 = "add";
  var peg$c11 = "sub";
  var peg$c12 = "mul";
  var peg$c13 = "udiv";
  var peg$c14 = "sdiv";
  var peg$c15 = "and";
  var peg$c16 = "orr";
  var peg$c17 = "eor";
  var peg$c18 = "mvn";
  var peg$c19 = "lsl";
  var peg$c20 = "#";
  var peg$c21 = "lsr";
  var peg$c22 = "b";
  var peg$c23 = "bl";
  var peg$c24 = ".";
  var peg$c25 = ",";
  var peg$c26 = "[";
  var peg$c27 = "]";
  var peg$c28 = "\"";
  var peg$c29 = "//";
  var peg$c30 = "\r\n";

  var peg$r0 = /^[a-zA-Z]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[a-zA-Z_]/;
  var peg$r3 = /^[a-zA-Z0-9_]/;
  var peg$r4 = /^[^"]/;
  var peg$r5 = /^[\n\r]/;
  var peg$r6 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation(".global", false);
  var peg$e1 = peg$literalExpectation(".section .data", false);
  var peg$e2 = peg$literalExpectation(".data", false);
  var peg$e3 = peg$literalExpectation(".section", false);
  var peg$e4 = peg$literalExpectation(".text", false);
  var peg$e5 = peg$literalExpectation(":", false);
  var peg$e6 = peg$literalExpectation("ldr", false);
  var peg$e7 = peg$literalExpectation("ldrb", false);
  var peg$e8 = peg$literalExpectation("ldp", false);
  var peg$e9 = peg$literalExpectation("str", false);
  var peg$e10 = peg$literalExpectation("add", false);
  var peg$e11 = peg$literalExpectation("sub", false);
  var peg$e12 = peg$literalExpectation("mul", false);
  var peg$e13 = peg$literalExpectation("udiv", false);
  var peg$e14 = peg$literalExpectation("sdiv", false);
  var peg$e15 = peg$literalExpectation("and", false);
  var peg$e16 = peg$literalExpectation("orr", false);
  var peg$e17 = peg$literalExpectation("eor", false);
  var peg$e18 = peg$literalExpectation("mvn", false);
  var peg$e19 = peg$literalExpectation("lsl", false);
  var peg$e20 = peg$literalExpectation("#", false);
  var peg$e21 = peg$literalExpectation("lsr", false);
  var peg$e22 = peg$literalExpectation("b", false);
  var peg$e23 = peg$literalExpectation("bl", false);
  var peg$e24 = peg$literalExpectation(".", false);
  var peg$e25 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e26 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e27 = peg$literalExpectation(",", false);
  var peg$e28 = peg$literalExpectation("[", false);
  var peg$e29 = peg$literalExpectation("]", false);
  var peg$e30 = peg$otherExpectation("integer");
  var peg$e31 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e32 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e33 = peg$otherExpectation("string");
  var peg$e34 = peg$literalExpectation("\"", false);
  var peg$e35 = peg$classExpectation(["\""], true, false);
  var peg$e36 = peg$literalExpectation("//", false);
  var peg$e37 = peg$anyExpectation();
  var peg$e38 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e39 = peg$literalExpectation("\r\n", false);
  var peg$e40 = peg$otherExpectation("whitespace");
  var peg$e41 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(gs, ds1, ts, ds2) {
    let dataSectionConcat = []
    if (ds1 != null) dataSectionConcat = dataSectionConcat.concat(ds1);
    if (ds2 != null) dataSectionConcat = dataSectionConcat.concat(ds2);
    return new Root(gs, dataSectionConcat, ts);
  };
  var peg$f1 = function(id) { return id; };
  var peg$f2 = function(ident, ins) {
    return new TextSection(ident, ins);
  };
  var peg$f3 = function(ins) { return ins; };
  var peg$f4 = function(ins) { return ins; };
  var peg$f5 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'add', reg1, reg2, reg3, null);
  };
  var peg$f6 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'sub', reg1, reg2, reg3, null);
  };
  var peg$f7 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'mul', reg1, reg2, reg3, null);
  };
  var peg$f8 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'udiv', reg1, reg2, reg3, null);
  };
  var peg$f9 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'sdiv', reg1, reg2, reg3, null);
  };
  var peg$f10 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'and', reg1, reg2, reg3, null);
  };
  var peg$f11 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'orr', reg1, reg2, reg3, null);
  };
  var peg$f12 = function(reg1, reg2, reg3) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'eor', reg1, reg2, reg3, null);
  };
  var peg$f13 = function(reg1, reg2) {
    const loc = location()?.start;
    return new Operation(loc?.line, loc?.column, 'mvn', reg1, reg2, null, null);
  };
  var peg$f14 = function(reg) { return reg; };
  var peg$f15 = function() { return parseInt(text(), 10); };
  var peg$f16 = function(id) {
    let completeId = id[0]+id[1]?.join('');
    return completeId; 
  };
  var peg$f17 = function(chars) { return chars.join(''); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseGlobalSection();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseDataSection();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parse_();
      s5 = peg$parseTextSection();
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseDataSection();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f0(s1, s3, s5, s7);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseGlobalSection() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseID();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f1(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDataSection() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 14) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 14;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = [];
      s4 = peg$parseDeclarations();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parseDeclarations();
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c2) {
        s1 = peg$c2;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = [];
        s4 = peg$parseDeclarations();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseDeclarations();
        }
        s1 = [s1, s2, s3];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseTextSection() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (input.substr(peg$currPos, 5) === peg$c4) {
      s2 = peg$c4;
      peg$currPos += 5;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parse_();
    s4 = peg$parseID();
    if (s4 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s5 = peg$c5;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = [];
        s8 = peg$parseInstructions();
        if (s8 !== peg$FAILED) {
          while (s8 !== peg$FAILED) {
            s7.push(s8);
            s8 = peg$parseInstructions();
          }
        } else {
          s7 = peg$FAILED;
        }
        if (s7 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s4, s7);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstructions() {
    var s0, s1;

    s0 = peg$parseLoad();
    if (s0 === peg$FAILED) {
      s0 = peg$parseStore();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseArithmetic();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f3(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseLogic();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f4(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$parseRotation();
            if (s0 === peg$FAILED) {
              s0 = peg$parseJumps();
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseLoad() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseregister();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCOMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parseCIZQ();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseregister();
            if (s7 !== peg$FAILED) {
              s8 = peg$parseCDER();
              if (s8 !== peg$FAILED) {
                s1 = [s1, s2, s3, s4, s5, s6, s7, s8];
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c7) {
        s1 = peg$c7;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parseregister();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCOMA();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            s6 = peg$parseCIZQ();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseregister();
              if (s7 !== peg$FAILED) {
                s8 = peg$parseCDER();
                if (s8 !== peg$FAILED) {
                  s1 = [s1, s2, s3, s4, s5, s6, s7, s8];
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 3) === peg$c8) {
          s1 = peg$c8;
          peg$currPos += 3;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e8); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          s3 = peg$parseregister();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseCOMA();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              s6 = peg$parseregister();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseCOMA();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  s9 = peg$parseCIZQ();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseregister();
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parseCDER();
                      if (s11 !== peg$FAILED) {
                        s1 = [s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11];
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseStore() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c9) {
      s1 = peg$c9;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseregister();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseCOMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parseCIZQ();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseregister();
            if (s7 !== peg$FAILED) {
              s8 = peg$parseCDER();
              if (s8 !== peg$FAILED) {
                s1 = [s1, s2, s3, s4, s5, s6, s7, s8];
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseArithmetic() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
